<resources>
    <string name="app_name">Hello Click</string>
    <string name="text_hello">Hello World, how are you doing?</string>
    <string name="click_me">CLICK ME!</string>
    <string name="reset">RESET</string>
    <string name="reverse">REVERSE</string>
    <string name="text_count">0</string>
    <string name="increment_text">Increment size</string>
    <string name="normal">NORMAL</string>
    <string name="big">BIG</string>

</resources>
